# job-parser

./: README.md  pyproject.toml  request_api.py
src/: main.py  request_api.py  vacancies.py  working_to_file.py
